#2 LogicCondition.newInstance