@@ -6,6 +6,7 @@ import lombok.Getter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 /**
  * Created by penghs at 2023/11/22 11:05
@@ -20,8 +21,8 @@ public class Condition {
     private final List<LogicCondition> logics;
 
     public Condition(List<ConditionItem<?, ?>> ands, List<LogicCondition> logics) {
-        this.ands = ands != null ? ands.stream().filter(Objects::nonNull).toList() : new ArrayList<>();
-        this.logics = logics != null ? logics.stream().filter(Objects::nonNull).toList() : new ArrayList<>();
+        this.ands = ands != null ? ands.stream().filter(Objects::nonNull).collect(Collectors.toList()) : new ArrayList<>();
+        this.logics = logics != null ? logics.stream().filter(Objects::nonNull).collect(Collectors.toList()) : new ArrayList<>();
     }
 
     public static Condition newInstance() {
