@@ -4,8 +4,10 @@ import cn.nuturbo.common.utils.Asserts;
 import cn.nuturbo.query.model.condition.conditionItem.ConditionItem;
 import lombok.Getter;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 /**
  * Created by penghs at 2023/11/22 12:07
@@ -18,6 +20,17 @@ public class LogicCondition {
     public LogicCondition(LogicalOperator logicalOperator, List<ConditionItem<?, ?>> conditionItems) {
         this.logicalOperator = Asserts.notNull(logicalOperator, "logicalOperator of LogicCondition can not be null.");
         Asserts.notNull(conditionItems, "conditionItems of LogicCondition can not be null.");
-        this.conditionItems = conditionItems.stream().filter(Objects::nonNull).toList();
+        this.conditionItems = conditionItems.stream().filter(Objects::nonNull).collect(Collectors.toList());
+    }
+
+    public static LogicCondition newInstance(LogicalOperator logicalOperator) {
+        return new LogicCondition(logicalOperator, Collections.emptyList());
+    }
+
+    public LogicCondition and(ConditionItem<?, ?> and) {
+        if (and != null) {
+            conditionItems.add(and);
+        }
+        return this;
     }
 }
